--- a/src/main/webapp/resource/message/interface-parameters.htm
+++ b/src/main/webapp/resource/message/interface-parameters.htm
@@ -1,5 +1,5 @@
 <div class="page-container" id="parameters-table">
-	<div class="cl pd-5 bg-1 bk-gray mt-0"> <span class="l"><a id="add-parameter" href="javascript:;" class="btn btn-primary radius"> 增加新参数</a></span>&nbsp;<span id="editTag" style="color: red;"></span><span class="r"> <a id="load-json-parameter" href="javascript:;" class="btn btn-primary radius">导入报文</a></span></div>
+	<div class="cl pd-5 bg-1 bk-gray mt-0"> <span class="l"><a id="del-all-parameter" href="javascript:;" class="btn btn-danger radius">删除全部</a>&nbsp;<a id="add-parameter" href="javascript:;" class="btn btn-primary radius">增加新参数</a></span>&nbsp;<span id="editTag" style="color: red;"></span><span class="r"> <a id="load-json-parameter" href="javascript:;" class="btn btn-primary radius">导入报文</a></span></div>
 	<table class="table table-border table-bordered table-bg" id="paramTable">
 		<thead>
 			<tr class="text-c">
